# pythongeneral

./: README.md  pyproject.toml
.github/workflows/: python-publish.yml
pythongeneral/dataProcessing/: pandas.py  string.py
pythongeneral/database/: mongo.py
pythongeneral/email/: sendEmail.py
pythongeneral/log/: logging.py
pythongeneral/model/: mongo.py
